--- a/templates/base.html
+++ b/templates/base.html
@@ -50,8 +50,9 @@
 
 
     <script type="text/javascript" src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
-    <!-- <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script> -->
-    <script type="text/javascript" src="{% static 'js/jSignature.min.js' %}"></script>
-    <!-- <script type="text/javascript" src="{% static 'js/popper.min.js' %}"></script> -->
+    <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+    <!-- <script type="text/javascript" src="{% static 'js/jSignature.min.js' %}"></script> -->
+    <script type="text/javascript" src="{% static 'js/popper.min.js' %}"></script>
+    {{ form.media }}
   </body>
 </html>
